// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Text matches snapshot when it has Text and TextLink as children 1`] = `
.emotion-0 {
  display: inline;
  color: #172b4e;
  font-size: 1em;
}

.emotion-2 {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  color: #3A78F2;
}

.emotion-2:hover {
  cursor: pointer;
}

.emotion-2:hover {
  color: #2A41A2;
}

.emotion-2:hover {
  -webkit-text-decoration: underline!important;
  text-decoration: underline!important;
}

<span
  class="emotion-0"
>
  Text content 
  <span
    class="emotion-0"
  >
    nested
  </span>
   with a 
  <span
    class="emotion-2"
  >
    link
  </span>
</span>
`;

exports[`Text matches snapshot when it has a size and category 1`] = `
.emotion-0 {
  display: inline;
  color: #172b4e;
  font-size: 1.1em;
  color: #3DB5D0;
}

<span
  class="emotion-0"
>
  Text content
</span>
`;

exports[`Text matches snapshot when it has children 1`] = `
.emotion-0 {
  display: inline;
  color: #172b4e;
  font-size: 1em;
}

<span
  class="emotion-0"
>
  Text content
</span>
`;

exports[`Text matches snapshot when it is bold 1`] = `
.emotion-0 {
  display: inline;
  font-weight: 500;
  letter-spacing: 0.01em;
  color: #172b4e;
  font-size: 1em;
}

<span
  class="emotion-0"
>
  Text content
</span>
`;

exports[`Text matches snapshot when it is light and inversed 1`] = `
.emotion-0 {
  display: inline;
  font-weight: 300;
  letter-spacing: 0.06em;
  color: #fff;
  font-size: 1em;
}

<span
  class="emotion-0"
>
  Text content
</span>
`;
